Mise à jour des textes

--- a/fi-front/public/index.html
+++ b/fi-front/public/index.html
@@ -5,10 +5,26 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <!-- Primary Meta Tags -->
+<title>FISA BENIN | Digital Marketing | Service numérique</title>
+<meta name="title" content="FISA BENIN | Digital Marketing | Service numérique" />
+<meta name="description" content="Profitez de l’expertise marketing de notre agence de marketing digital et d’une vision digitale de votre marché pour vous imposer dans votre secteur d'activité." />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://fisa-benin.5sender.com/" />
+<meta property="og:title" content="FISA BENIN | Digital Marketing | Service numérique" />
+<meta property="og:description" content="Profitez de l’expertise marketing de notre agence de marketing digital et d’une vision digitale de votre marché pour vous imposer dans votre secteur d'activité." />
+<meta property="og:image" content="https://fisa-benin.5sender.com/bannerSender2.png" />
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://fisa-benin.5sender.com/" />
+<meta property="twitter:title" content="FISA BENIN | Digital Marketing | Service numérique" />
+<meta property="twitter:description" content="Profitez de l’expertise marketing de notre agence de marketing digital et d’une vision digitale de votre marché pour vous imposer dans votre secteur d'activité." />
+<meta property="twitter:image" content="https://fisa-benin.5sender.com/bannerSender2.png" />
+
+<!-- Meta Tags Generated with https://metatags.io -->
      <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
 <div class="elfsight-app-6f326342-9371-405b-9c87-4238334e251a" data-elfsight-app-lazy></div>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
