Mise à jour des couleurs et intégration WhatsApp widget

--- a/fi-front/public/index.html
+++ b/fi-front/public/index.html
@@ -25,8 +25,8 @@
 <meta property="twitter:image" content="https://fisa-benin.5sender.com/bannerSender2.png" />
 
 <!-- Meta Tags Generated with https://metatags.io -->
-     <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
-<div class="elfsight-app-6f326342-9371-405b-9c87-4238334e251a" data-elfsight-app-lazy></div>
+     <!-- <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+<div class="elfsight-app-6f326342-9371-405b-9c87-4238334e251a" data-elfsight-app-lazy></div> -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
